fix overflow sidebar

--- a/client/components/common/layout/hat/mobile/Sidebar.module.scss
+++ b/client/components/common/layout/hat/mobile/Sidebar.module.scss
@@ -14,6 +14,7 @@
   transition-duration: 0.15s;
   transition-timing-function: linear;
   opacity: 0;
+  overflow-y: scroll;
 
   &_show {
     transform: translate(0%, 0);
